--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XmlConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.0,Profile=Client">
