--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -123,7 +123,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Functions.cs" />
+    <Compile Include="BotCommand.cs" />
+    <Compile Include="IrcFunctions.cs" />
+    <Compile Include="IrcFormatting.cs" />
+    <Compile Include="IrcNumericReplyLine.cs" />
+    <Compile Include="IrcReplyCodes.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlConfiguration.cs" />
