--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -135,6 +135,7 @@
     <Compile Include="IrcFormatting.cs" />
     <Compile Include="IrcNumericReplyLine.cs" />
     <Compile Include="IrcReplyCodes.cs" />
+    <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="XmlConfiguration.cs" />
