Started restructuring botcommand-"if"s to a "switch" block (to be finished, is easy :-) ) and added "BotCommandName" and "BotCommandParams" to IrcMessageLine for easier use.

--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -124,7 +124,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BotCommand.cs" />
+    <Compile Include="IrcMessageLine.cs" />
     <Compile Include="Botop.cs" />
     <Compile Include="botOpDB.designer.cs">
       <AutoGen>True</AutoGen>
