--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -143,6 +143,13 @@
     <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scriptingaccess.cs" />
+    <Compile Include="ScriptingGUI.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ScriptingGUI.Designer.cs">
+      <DependentUpon>ScriptingGUI.cs</DependentUpon>
+    </Compile>
     <Compile Include="Util.cs" />
     <Compile Include="XmlConfiguration.cs" />
   </ItemGroup>
@@ -206,6 +213,11 @@
     <None Include="BotOpDB.dbml.layout">
       <DependentUpon>BotOpDB.dbml</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ScriptingGUI.resx">
+      <DependentUpon>ScriptingGUI.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
