Installer is now, yet again, compilable for all. I added many configuration types so you can simply choose which project to build.

--- a/CSharpBot Script Compiler/Compiler.csproj
+++ b/CSharpBot Script Compiler/Compiler.csproj
@@ -33,6 +33,15 @@
   <PropertyGroup>
     <RootNamespace>Compiler</RootNamespace>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Installer|x86'">
+    <OutputPath>bin\x86\Installer\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Compiler|x86'">
+    <OutputPath>bin\x86\Compiler\</OutputPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'CSharpBot|x86'">
+    <OutputPath>bin\x86\CSharpBot\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
