--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -151,6 +151,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>BotOpDB.dbml</DependentUpon>
     </Compile>
+    <Compile Include="ControlWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ControlWindow.Designer.cs">
+      <DependentUpon>ControlWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="IrcException.cs" />
     <Compile Include="IrcMessageLine.cs" />
     <Compile Include="Botop.cs" />
@@ -233,6 +239,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="ControlWindow.resx">
+      <DependentUpon>ControlWindow.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScriptingGUI.resx">
       <DependentUpon>ScriptingGUI.cs</DependentUpon>
     </EmbeddedResource>
