--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -164,6 +164,7 @@
     <Compile Include="IrcFormatting.cs" />
     <Compile Include="IrcNumericReplyLine.cs" />
     <Compile Include="IrcReplyCodes.cs" />
+    <Compile Include="LiveScript.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
