Added liveserver - port 3000. Start client, enter address, enter password at >, enter commands(client will close if password bad). ICEDREAM: i need config help.

--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -169,6 +169,7 @@
     <Compile Include="IrcNumericReplyLine.cs" />
     <Compile Include="IrcReplyCodes.cs" />
     <Compile Include="LiveScript.cs" />
+    <Compile Include="LiveServer.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
