Made major improvements to LiveServer and LiveClient, however, seemed to break functionality. -_- superroot, take a look :)

--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -150,11 +150,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BotOpDB.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>BotOpDB.dbml</DependentUpon>
-    </Compile>
+    <Compile Include="BotOpDB.designer.cs" />
     <Compile Include="ControlWindow.cs">
       <SubType>Form</SubType>
     </Compile>
