Superroot, look at line 86 in your simpleliveclient! It causes the code to seemingly freeze, it wont read any more lines.

--- a/CSharpBot Script Compiler/Compiler.csproj
+++ b/CSharpBot Script Compiler/Compiler.csproj
@@ -60,6 +60,9 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LiveClient-Debug|x86'">
     <OutputPath>bin\x86\LiveClient-Debug\</OutputPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Client|x86'">
+    <OutputPath>bin\x86\Client\</OutputPath>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
