--- a/SimpleLiveClient/SimpleLiveClient.csproj
+++ b/SimpleLiveClient/SimpleLiveClient.csproj
@@ -32,6 +32,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
+    <RunCodeAnalysis>true</RunCodeAnalysis>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LiveClient-Debug|x86'">
     <OutputPath>bin\x86\LiveClient-Debug\</OutputPath>
