--- a/SimpleLiveClient/SimpleLiveClient.csproj
+++ b/SimpleLiveClient/SimpleLiveClient.csproj
@@ -34,6 +34,7 @@
     <WarningLevel>4</WarningLevel>
     <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
     <RunCodeAnalysis>true</RunCodeAnalysis>
+    <DocumentationFile>bin\Release\ControlClient.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'LiveClient-Debug|x86'">
     <OutputPath>bin\x86\LiveClient-Debug\</OutputPath>
