Created base livserver with NICK command. Icedream&Merbo: Could you guys help me out with all the bugs esp in Client. If we could get the bugs worked out, I could get started on PRIVMSG, password auth, and KILL

--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -182,6 +182,7 @@
     <Compile Include="IrcNumericReplyLine.cs" />
     <Compile Include="IrcReplyCodes.cs" />
     <Compile Include="LiveScript.cs" />
+    <Compile Include="LiveServer.cs" />
     <Compile Include="Math.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
