Should now be Mono-(xbuild-)compatible.
Signed-off-by: Icedream <icedream2k9@die-optimisten.net>

--- a/CSharpBot/CSharpBot.csproj
+++ b/CSharpBot/CSharpBot.csproj
@@ -216,6 +216,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="BotOpDB.dbml">
       <Generator>MSLinqToSQLGenerator</Generator>
       <LastGenOutput>BotOpDB.designer.cs</LastGenOutput>
